--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="p-4">
-  <h1 class="mb-4">Docker Containers <small class="text-muted float-end"><a href="/logout">Logout</a></small></h1>
+  <h1 class="mb-4">Docker Containers <small class="text-muted float-end"> <a href="/logout">Logout</a></small></h1>
   {% for container in containers %}
     <div class="card mb-3">
       <div class="card-header d-flex justify-content-between">
@@ -29,5 +29,6 @@
       </div>
     </div>
   {% endfor %}
+  <h4> User: {{ username }}</h4>
 </body>
 </html>
